added python tool compiles and runs
