# openapi.yaml
@@ -34,6 +34,34 @@ paths:
         "200":
           description: OK
 
+  /run_python_code:
+    post:
+      operationId: runPythonCode
+      summary: Run Python code
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/runPythonCodeRequest'
+      responses:
+        "200":
+          description: OK
+
+  /run_python_ast_code:
+    post:
+      operationId: runPythonAstCode
+      summary: Run Python code with AST
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/runPythonAstCodeRequest'
+      responses:
+        "200":
+          description: OK
+
 components:
   schemas:
     writeCodeRequest:
@@ -61,3 +89,21 @@ components:
             type: string
             description: The path of the file to read.
             required: true
+
+    runPythonCodeRequest:
+      type: object
+      required:
+      - code
+      properties:
+        code:
+          type: string
+          description: The Python code to run.
+
+    runPythonAstCodeRequest:
+      type: object
+      required:
+      - code
+      properties:
+        code:
+          type: string
+          description: The Python code to run with AST.
